src/test/ui/issue-47706-trait.stderr
error[E0601]: main function not found in crate issue_47706_trait

error[E0593]: function is expected to take a single 0-tuple as argument, but it takes 2 distinct arguments
  --> $DIR/issue-47706-trait.rs:13:20
   |
LL |     fn f(&self, _: ()) {
   |     ------------------ takes 2 distinct arguments
LL |         None::<()>.map(Self::f);
   |                    ^^^ expected function that takes a single 0-tuple as argument

error: aborting due to 2 previous errors

Some errors occurred: E0593, E0601.
For more information about an error, try `rustc --explain E0593`.
